# mu

./: Cli.hs  Main.hs  README.md  default.nix  example.yaml  flake.nix  install.sh  mu.cabal  yaml-reader.cabal
